# mother-terminal

./: .gitignore  CLAUDE.md  Cargo.toml  config.example.toml  go.mod  go.sum
cmd/mother/: backends_darwin.go  backends_linux.go  main.go
cmd/motherctl/: main.go
cmd/mtt/: backends_common.go  main.go
cmd/mttctl/: main.go
docs/agents/: usage-tracking.md
docs/superpowers/specs/: 2026-03-20-mother-terminal-design.md  2026-03-21-mtt-v2-design.md
internal/backend/: injector.go  registry.go  registry_test.go
internal/backend/macos/: macos.go
internal/backend/tmux/: tmux.go  tmux_test.go
internal/backend/wayland/: wayland.go
internal/backend/x11/: x11.go
internal/config/: config.go  config_test.go
internal/discovery/: discovery_test.go  registry.go  scanner.go
internal/history/: history.go  history_test.go
internal/pty/: spawner.go
internal/remote/: remote.go  remote_test.go
internal/scheduler/: ping.go  scheduler_test.go  window.go
internal/session/: manager.go  monitor.go  monitor_test.go  session_test.go  state.go
internal/tui/: app.go  dashboard.go  detail.go  input.go  input_test.go  timer.go
pkg/: errors.go  types.go
src/: main.rs
src/history/: mod.rs
src/monitor/: mod.rs
src/pane/: mod.rs
src/persist/: mod.rs
src/ui/: mod.rs
src/usage/: mod.rs
tests/: pty_test.rs  scrollback_test.rs
