[package]
name = "mtt"
version = "0.0.14"
edition = "2024"
description = "AI-native terminal multiplexer"
repository = "https://github.com/kickthemoon0817/mother-terminal"

[dependencies]
# Terminal UI
crossterm = "0.28"
ratatui = "0.29"

# PTY management
portable-pty = "0.8"

# Terminal state parsing (ANSI escape sequences)
vt100 = "0.15"

# Async runtime

# Config
toml = "0.8"
serde = { version = "1", features = ["derive"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Misc
anyhow = "1"
dirs = "5"
serde_json = "1"
log = "0.4"
simplelog = "0.12"
